<resources>
    <string name="app_name">FoodJar Admin</string>
    <string name="search">Search</string>
    <string name="find_an_item">Find an Item</string>
    <string name="filters">Filters</string>
    <string name="item_image">Item_Image</string>
    <string name="_25_00">$ 25.00</string>
    <string name="price">Price</string>
    <string name="item_id_005">Item-ID-005</string>
    <string name="pizza">Special Chicken B.B.Q Pizza</string>
    <string name="stock">Stock :</string>
    <string name="_55_items">55 Items</string>
    <string name="add_new_item">Add New Item</string>
    <string name="item_name">Item Name</string>
    <string name="name">Name</string>
    <string name="quantity">Quantity</string>
    <string name="available_stock">Available Stock</string>
    <string name="item_price">Item Price</string>
    <string name="description_optional">Description (Optional)</string>
    <string name="description">Description</string>
    <string name="upload_item_image">Upload Item Image</string>
    <string name="add_image">add_image</string>
    <string name="save">Save</string>
    <string name="place_an_order">Place an Order</string>
    <string name="search_item">Search Item</string>
    <string name="check_stock">Check Stock</string>
    <string name="order_history">My Orders</string>
    <string name="user_profile">User Profile</string>
    <string name="dashboard">Dashboard</string>
    <string name="back_button">back_button</string>
    <string name="rs_50_00">Rs.50.00/-</string>
    <string name="itemimage">ItemImage</string>
    <string name="stock_50_items">Stock : 50 Items</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up_now">Sign Up Now !</string>
    <string name="login">Login</string>
    <string name="login_to_your_account">Login to Your Account</string>
    <string name="create_a_new_account">Create a New Account</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in_now">Sign In Now !</string>
    <string name="sign_up">Sign Up</string>
    <string name="phone_number">Phone Number</string>
    <string name="address">Address</string>
    <string name="back">Back</string>
    <string name="item_category">Item Category</string>
    <string name="e_g_fruit_vegetable_cold_drink_etc">e.g. fruit, vegetable, cold drink etc</string>
    <string name="e_g_kg_dozen_items">e.g. Kg, dozen, items</string>
    <string name="unit">Unit</string>
    <string name="fast_food">Fast Food</string>
    <string name="add_to_cart">ADD TO CART</string>
    <string name="the_translations_below_need_to_be_checked_and_inserted_above_into_the_appropriate_translation_tables_removing_any_numbers_numbers_do_not_necessarily_match_those_in_definitions_see_instructions_at">The translations below need to be checked and inserted above into the appropriate translation tables, removing any numbers. Numbers do not necessarily match those in definitions. See instructions at</string>
    <string name="in_stock_15_items_left">In Stock : 15 Items Left</string>
    <string name="item_details">Item Details</string>
    <string name="us_2_00_item">US $ 2.00 /Item</string>
    <string name="referred_by">Referred By</string>
    <string name="cart">Shopping Cart</string>
    <string name="place_order">Place Order</string>
    <string name="_25_items">25 Items</string>
    <string name="price_">Price : </string>
    <string name="look_like_you_have_no_items_in_your_shopping_cart">Look like you have no items in your shopping cart</string>
    <string name="cart_is_empty">Cart is empty !</string>
    <string name="total">Total =</string>
    <string name="rs_2_250">Rs.2,250/-</string>
    <string name="placeholderimage">placeholderImage</string>
    <string name="continue_shopping">Continue Shopping</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="home">Home</string>
    <string name="my_orders">My Orders</string>
    <string name="log_out">Log Out</string>
    <string name="navbutton">navbutton</string>
    <string name="total_amount">Total Amount</string>
    <string name="total_items">Total Items :</string>
    <string name="_20">20</string>
    <string name="remember_me">Remember Me</string>
    <string name="register_new_staff_member">Register New Staff Member</string>
    <string name="register">Register</string>
    <string name="orders">Orders</string>
    <string name="users">Users</string>
    <string name="staff">Staff</string>
    <string name="add_new_staff_member">Add New Staff Member</string>
    <string name="my_profile">My Profile</string>
    <string name="shop_125_alipur_plaza_basment_islambad">Shop 125, Alipur Plaza Basement, Islamabad </string>
    <string name="adan_foods_pvt_ltd">Adan Foods Pvt. Ltd.</string>
    <string name="_92_301_3370834">+92-301-3370834</string>
    <string name="muhammad_zeeshan">Muhammad Zeeshan</string>
    <string name="stock_">Stock</string>
    <string name="update">Update</string>
    <string name="order_details">Order Details</string>
    <string name="order_id">Order Id</string>
    <string name="date">Date</string>
    <string name="_1523654789631">1523654789631</string>
    <string name="_26_7_2019">26/7/2019</string>
    <string name="order_status">Order Status</string>
    <string name="pending">Pending</string>
    <string name="shop_name">Shop Name</string>
    <string name="shop_address">Shop Address</string>
    <string name="amount">Amount</string>
    <string name="qty">Qty</string>
    <string name="_">#</string>
    <string name="total_order_amount">Total Order Amount =</string>
    <string name="assign_delivery_boy">Assign Delivery Boy</string>
    <string name="add_new_delivery_boy">Add New Delivery Boy</string>
    <string name="delivery_boys">Delivery Boys</string>
    <string name="register_new_delivery_boy">Register New Delivery Boy</string>
    <string name="staff_members">Staff Members</string>
    <string name="please_select_delivery_boy">Please select delivery boy</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="pending_orders">Pending Orders</string>
    <string name="delivered_orders">Delivered Orders</string>
    <string name="update_item">Update Item</string>
    <string name="quantity_per_pack">Quantity Per Pack</string>
    <string name="delete">Delete</string>
    <string name="update_or_delete_item">Update or Delete Item</string>
    <string name="assigned_orders">Assigned Orders</string>
    <string name="offers">Offers</string>
    <string name="offer_title">Offer Title</string>
    <string name="offer_description">Offer Description</string>
    <string name="offer_price">Offer Price</string>
    <string name="upload_offer_banner">Upload Offer Banner</string>
    <string name="_0_items_left">0 Items Left</string>
    <string name="abc_example_com">abc@example.com</string>
    <string name="_5_vat">5% VAT =</string>
    <string name="or">OR</string>

    <string-array name="Unit">
        <item>KG</item>
        <item>COTTON</item>
        <item>PIECE</item>
        <item>GRAM</item>
        <item>ML</item>
        <item>BAG</item>
        <item>PACK</item>
        <item>BUNDLE</item>
        <item>DOZEN</item>
        <item>ITEMS</item>
        <item>GALLON</item>
        <item>KG</item>
    </string-array>

    <string-array name="Categories">
        <item>Fruit</item>
        <item>Vegetable</item>
        <item>Drink</item>
        <item>Drink</item>
        <item>Juice</item>
        <item>Milk</item>
        <item>Fast Food</item>
        <item>Mineral Water</item>
        <item>Snack</item>
        <item>Biscuit</item>
        <item>Bubble</item>
        <item>Chocolate</item>
        <item>Cooking Oil</item>
        <item>Banaspati Ghee</item>
        <item>Crackers</item>
        <item>Chips</item>
        <item>Sauces</item>
        <item>Rice</item>
        <item>Powder</item>
        <item>Fish</item>
        <item>Tuna</item>
        <item>Sardine</item>
        <item>Chicken</item>
        <item>Beef</item>
        <item>Mutton</item>
    </string-array>
</resources>
