<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:title="@string/home"
            android:icon="@drawable/ic_home_black_24dp"/>
        <item
            android:id="@+id/pendingOrders"
            android:title="@string/pending_orders"
            android:icon="@drawable/ic_history_black_24dp"/>
        <item
            android:id="@+id/assignedOrders"
            android:title="@string/assigned_orders"
            android:icon="@drawable/ic_history_black_24dp"/>
        <item
            android:id="@+id/deliveredOrders"
            android:title="@string/delivered_orders"
            android:icon="@drawable/ic_history_black_24dp"/>
        <item
            android:id="@+id/offers"
            android:title="@string/offers"
            android:icon="@drawable/ic_local_offer_black_24dp"/>
        <item
            android:id="@+id/users"
            android:title="@string/users"
            android:icon="@drawable/ic_people_black_24dp"/>
        <item
            android:id="@+id/addNewDeliveryBoy"
            android:title="@string/add_new_delivery_boy"
            android:icon="@drawable/ic_person_add_black_24dp"/>
        <item
            android:id="@+id/deliveryBoys"
            android:title="@string/delivery_boys"
            android:icon="@drawable/ic_people_black_24dp"/>

        <item
            android:id="@+id/logout"
            android:title="@string/log_out"
            android:icon="@drawable/ic_vpn_key_black_24dp"/>
    </group>
</menu>