<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:background="@drawable/bg_relative_layout"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/aclonica"
                android:text="@string/update_or_delete_item"
                android:textSize="14sp"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/ed_ItemName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="@drawable/bg_dialog_edit_text"
                android:hint="@string/item_name"
                android:inputType="text"
                android:textSize="12sp" />

            <Spinner
                android:id="@+id/spinnerCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="@drawable/bg_dialog_edit_text"
                android:entries="@array/Categories"
                android:hint="@string/amount"
                android:inputType="numberDecimal"
                android:padding="0dp"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/ed_ItemPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="@drawable/bg_dialog_edit_text"
                android:hint="@string/item_price"
                android:inputType="numberDecimal"
                android:textSize="12sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/ed_Stcok"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_weight="2"
                    android:background="@drawable/bg_dialog_edit_text"
                    android:hint="@string/stock_"
                    android:inputType="number"
                    android:textSize="12sp" />

                <Spinner
                    android:id="@+id/spinnerUnit"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginBottom="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_dialog_edit_text"
                    android:entries="@array/Unit"
                    android:hint="@string/unit"
                    android:inputType="numberDecimal"
                    android:padding="0dp"
                    android:textSize="12sp" />
            </LinearLayout>

            <EditText
                android:id="@+id/ed_QuantityPerPack"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="2"
                android:background="@drawable/bg_dialog_edit_text"
                android:hint="@string/quantity_per_pack"
                android:inputType="number"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/ed_Description"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/bg_dialog_edit_text"
                android:gravity="start|top"
                android:hint="@string/description"
                android:inputType="textMultiLine"
                android:padding="8dp"
                android:textSize="12sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/btnDeleteItem"
                    android:layout_width="0dp"
                    android:layout_height="35dp"
                    android:layout_weight="1.5"
                    android:fontFamily="@font/aclonica"
                    android:text="@string/delete"
                    android:background="@color/colorRed"
                    android:textAllCaps="false"
                    android:drawableLeft="@drawable/ic_delete_forever_black_24dp"
                    android:paddingLeft="8dp"
                    android:textColor="@color/colorWhite"
                    android:textSize="12sp"
                    android:drawableStart="@drawable/ic_delete_forever_black_24dp"
                    android:paddingStart="8dp"
                    tools:ignore="RtlSymmetry" />
                <Button
                    android:id="@+id/btnUpdateItem"
                    android:layout_width="0dp"
                    android:layout_height="35dp"
                    android:paddingLeft="8dp"
                    android:layout_weight="1.5"
                    android:drawableLeft="@drawable/ic_update_black_24dp"
                    android:background="@drawable/bg_gradient"
                    android:fontFamily="@font/aclonica"
                    android:text="@string/update"
                    android:textAllCaps="false"
                    android:textColor="@color/colorWhite"
                    android:textSize="12sp"
                    android:drawableStart="@drawable/ic_update_black_24dp"
                    android:paddingStart="8dp"
                    tools:ignore="RtlSymmetry" />



            </LinearLayout>
        </LinearLayout>
    </ScrollView>


    <ImageView
        android:id="@+id/imgItem"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:scaleType="centerCrop"
        android:src="@drawable/app_logo" />


</RelativeLayout>